	- Adjusted Towny cheat protection so it will not affect players in creative mode.
	- Fixed loading of allies for nations.
	- Fixed typo for towny.cheat.bypass in new permission node code.
v0.77.1.11:
	- Explosion regen now fills the hole from the bottom up (No more bouncing loot).
	- Prevented 'plot fs $' from using negative values.
	- Rotated 'towny map' so north is at the top again.
	- Added new plot type identifiers on the towny map.
	  W - Wilds
	  C - Commercial/Shop
	  A - Arena
	  (shop plots which are for sale will show up as a blue $)
v0.77.1.12:
	- You can now set default modes via permissions. To set a group/user to default to town chat and have the map as they walk...
	  If using GroupManager...
	    add an Info node to the group/user towny_default_modes: 'tc,map'
	  If using PEX...
	    add an Options node for towny_default_modes: 'tc,map'
	  If using any other perms system (not guaranteed to work)
	    add a permission node - towny_default_modes.tc,map
v0.77.1.13:
	- Added thrown potions to the PVP protection tests (not fully implemented in Bukkit yet).
	- '/townyadmin town/nation' command is now useable at the console.
v0.77.1.14:
	- If using GM this version requires latest Dev GroupManager 1.7.5+ for all features to work fully.
	- Implemented new GM event system.
	- '/g' global chat mode now applies chat formatting again.
	- Implemented PEX events.
V0.77.1.15:
	- Fixed Null return from getPlayerPermissionStringNode when using PEX.
	- '/town set perm reset' and '/res set perm reset' now correctly update the plot data files.
v0.77.1.16:
	- '/plot perm' on a town owned plot now correctly shows R for resident instead of F for friend.
	- Fixed World settings for Explosions.
	- Permissions are now correctly read from the plot rather than the town. Town level permisisons are defaults and changes propogate with '/town set perm reset'.
	- You can no longer add town assistants who are not members of your town.